Track all project files and restore templates/about.html

--- a/templates/contact_me.html
+++ b/templates/contact_me.html
@@ -26,9 +26,9 @@ Contact
 			</form>
 			<div class="mt-4 p-3 rounded" style="background:#f7c873;color:#2a3d66;">
 				<h5>Contact Info</h5>
-				<p><strong>Email:</strong> {{ contact_info["email"] }}</p>
-				<p><strong>Phone:</strong> {{ contact_info["phone"] }}</p>
-				<p><strong>Address:</strong> {{ contact_info["address"] }}</p>
+					<p><strong>Email:</strong> Barneyl@mymail.com</p>
+					<p><strong>Phone:</strong> +1 888</p>
+					<p><strong>Address:</strong> Gardengrove 123 Drive, Tampa, FL7779311</p>
 			</div>
 		</div>
 	</div>
